<resources>
    <string name="app_name">Travelers</string>
    <string name="password">Contraseña</string>
    <string name="Email">Correo Electronico</string>
    <string name="signIn">Iniciar Sesion</string>
    <string name="signUp">Registrarse</string>
    <string name="InvalidSignIn">Correo electronico o contraseña son incorrectos o no esta registrado</string>
    <string name="Emptyfield">Un campo esta vacio</string>
    <string name="CreateAnAcount">Crear una Cuenta</string>
    <string name="Name">Nombre</string>
    <string name="LastName">Apellido</string>
    <string name="PhoneNumber">Numero de telefono</string>
    <string name="SignInGoogle">Iniciar sesion con Google</string>
    <string name="RegisterCompleted">Registro completado</string>
    <string name="RegisterProblem">El registro ha teneido problemas para completarse </string>
    <string name="title_activity_mapa_puntos_ciudad">mapaPuntosCiudadActivity</string>
    <string name="calculateRoute">Calcular ruta</string>
    <string name="android_sdk_places_api_key">AIzaSyBr2Rahmgp68p9V-QACQCeBmYZ1MqLqkac</string>
    <string name="android_sdk_map_api_key">AIzaSyBr2Rahmgp68p9V-QACQCeBmYZ1MqLqkac</string>
    <string name="direccion_origen">Direccion origen: %1$s</string>
    <string name="direccion_destino">Direccion destino: %1$s</string>
    <string name="botonModDestino">Modificar</string>
    <string name="botonModOrigen">Modificar</string>
    <string name="distancia">Distancia: %1$d metros</string>
    <string name="tiempo">Tiempo: %1$s</string>
    <string name="precio">Precio: $/ %1$f</string>
    <string name="marcadorOrigen">Desde</string>
    <string name="marcadorDestino">Hasta</string>
    <string name="api_key">AIzaSyBr2Rahmgp68p9V-QACQCeBmYZ1MqLqkac</string>
    <string name="GPSAlertDialogTitle">Alerta GPS</string>
    <string name="GPSAlertDialogMessage">Mensaje alerta GPS</string>
    <string name="action_settings">Configuración action</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="StartSocialNetwork">Iniciar sesion en red social</string>
    <string name="SignUpWithFacebook">Iniciar sesion con Facebook</string>
    <string name="facebook_app_id">437906781042448</string>
    <string name="fb_login_protocol_scheme">fb437906781042448</string>
    <string name="ErrorWithFacebookAccount">Error con cuenta de Facebook</string>
    <string name="SignInFacebookSuccessful">Inicio Sesion con facebook satisfactorio</string>
    <string name="Messaging">Mensajería</string>
</resources>